Fix login, new user, and diff in dark mode

--- a/app/javascript/stylesheets/diff.css
+++ b/app/javascript/stylesheets/diff.css
@@ -30,3 +30,10 @@
 .report-diff form {
   display: inline;
 }
+.diff ul {
+  background-color: var(--content-background-color);
+  color: var(--overall-text-color);
+}
+.diff {
+  border: 2px solid var(--content-border-color);
+}
